[project]
name = "travel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=2.4.1",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.10",
    "matplotlib>=3.10.8",
    "mcp>=1.0.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "streamlit>=1.54.0",
]
